--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-224.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.42MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇨🇳 中国-193.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-238.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-415.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-617.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-921.1KB/s(Youtube:不良林), server: 134.195.196.150, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇸🇬 新加坡-392.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-354.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-256.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-351.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林), server: 185.167.116.24, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇫🇷 法国-769.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-224.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-392.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
