--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-193.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-238.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-847.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-150.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-181.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-617.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-415.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-354.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-256.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-351.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林), server: 185.167.116.24, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇫🇷 法国-769.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.57MB/s(Youtube:不良林), server: 149.202.82.172, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 149.202.82.172, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇫🇷 法国-1.01MB/s(Youtube:不良林), server: 149.202.82.172, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-454.3KB/s(Youtube:不良林), server: 149.202.82.172, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇫🇷 法国-996.4KB/s(Youtube:不良林), server: 149.202.82.172, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-193.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-238.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-847.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-150.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-181.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-617.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-415.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-354.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-256.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-351.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-445.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-769.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-454.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-996.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
