--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 保加利亚-965.8KB/s(Youtube:不良林), server: 213.183.63.221, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 🇺🇸 美国-1.73MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-728.4KB/s(Youtube:不良林), server: 149.202.82.172, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-203.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-338.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-786.9KB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-305.8KB/s(Youtube:不良林), server: 149.202.82.172, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 149.202.82.172, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-529.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-536.3KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林), server: 185.167.116.24, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林), server: 185.167.116.24, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林), server: 185.167.116.24, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林), server: 213.183.53.221, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇺🇸 美国-978.7KB/s(Youtube:不良林), server: 38.75.136.21, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 保加利亚-965.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-437.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.73MB/s(Youtube:不良林)
-      - 🇫🇷 法国-728.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-203.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-338.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-786.9KB/s(Youtube:不良林)
+      - 🇫🇷 法国-305.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-536.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.37MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-308.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-259.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-485.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-978.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
